testsuite/tests/dependent/should_fail/T13135_simple.stderr
T13135_simple.hs:34:11: error: [GHC-83865]
    • Couldn't match type ‘SmartFun sig1’ with ‘Bool’
      Expected: Int -> Bool
        Actual: SmartFun (SigFun Int sig1)
      The type variable ‘sig1’ is ambiguous
    • In the expression: smartSym
      In an equation for ‘problem’: problem = smartSym

